add getState function

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
               <label class="form-label">Country</label>
               <select class="form-select form-select-s" id="country-select" aria-label=".form-select-s example"
                 required>
-
+                <option disabled hidden selected>Select</option>
               </select>
               <div class="invalid-feedback">
                 Fill in the field correctly
