--- a/src/index.html
+++ b/src/index.html
@@ -92,9 +92,17 @@
                 Fill in the field correctly
               </div>
 
+              <label class="form-label">State</label>
+              <select class="form-select form-select-s" id="state-select" aria-label=".form-select-s example" required>
+                <option disabled hidden selected>Select</option>
+              </select>
+              <div class="invalid-feedback">
+                Fill in the field correctly
+              </div>
+
               <label class="form-label">City</label>
               <select class="form-select form-select-s" id="city-select" aria-label=".form-select-s example" required>
-
+                <option disabled hidden selected>Select</option>
               </select>
 
               <div class="invalid-feedback">
