--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/ico" href="./assets/static/favicon.ico">
+  <script src="main.js"></script>
   <title>Search</title>
 </head>
 
