--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
           </li>
 
           <li class="nav-item container-fluid">
-            <a class="nav-link" id="historyLink" href="/history.html">
+            <a class="nav-link" id="historyLink" href="./history.html">
               <img src="./assets/img/history.svg" alt="">
               Previous searches
             </a>
